--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "eddo"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "eddo"
+path = "src/lib.rs"
+
+[[bin]]
+name = "eddo"
+path = "src/bin.rs"
 
 [dependencies]
+
