--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ name = "eddo"
 path = "src/bin.rs"
 required-features = ["binary"]
 
+[[bench]]
+name = "eddo"
+harness = false
+
 [dependencies]
 hex = "0.4.3"
 rand = "0.8.4"
@@ -24,4 +28,5 @@ structopt = { version = "0.3.22", optional = true }
 subtle = "2.4.0"
 
 [dev-dependencies]
+criterion = "0.3"
 proptest = "1.0.0"
